--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"postcss": "^8.5",
+		"semantic-release": "^24.2.9",
 		"tailwindcss": "^4.1.9",
 		"tw-animate-css": "1.3.3",
 		"typescript": "^5"
